<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.fragments.CursosNotasFragment">
<View
    android:id="@+id/wave"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_alignParentTop="true"
    android:background="@drawable/cut_fragment_background" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:text="@string/listadoCursos"
    android:textColor="@color/white"
    android:textSize="28sp"
    android:textStyle="bold"
    android:gravity="center"/>

<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recyclerCursosNotas"
    android:layout_above="@+id/contenerdorBtnCursosNota"
    android:layout_below="@+id/wave"
    android:layout_margin="10dp"></androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/contenerdorBtnCursosNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVolerAlumnos"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnBack"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVolverMenu"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnBackMenu"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</RelativeLayout>